--- a/.env
+++ b/.env
@@ -4,6 +4,9 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://SnkFccqr4asnuSpX:DgW,FWwvtEosi22suo95Wj,H45aPgUeHbXq9LrqFoWx4,aA5SeMN2sdeSnS9joxcf4uVujU3Mc@localhost:5432/wohnalert_dev?schema=public"
+DATABASE_URL="file:./records.db"
 POSTGRES_USER="SnkFccqr4asnuSpX"
 POSTGRES_PASSWORD="DgW,FWwvtEosi22suo95Wj,H45aPgUeHbXq9LrqFoWx4,aA5SeMN2sdeSnS9joxcf4uVujU3Mc"
+
+CD_API=https://changedetection.freizeitstress.org/api/v1
+CD_API_KEY=0f1116f8b2dce4a88f9dc0c3dc4e6a66
