--- a/compose.yml
+++ b/compose.yml
@@ -8,3 +8,9 @@ services:
     env_file: ".env"
     ports:
       - "5432:5432"
+    
+  wohnalert-app:
+    image: wohnalert
+    restart: always
+    ports:
+      - "4541:4541"
