--- a/package.json
+++ b/package.json
@@ -3,21 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 4541",
+    "dev": "next dev -p 4540",
     "build": "next build",
     "start": "next start -p 4541",
     "lint": "next lint"
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
+    "currency.js": "^2.0.4",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/validator": "^13.12.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
