--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,9 @@ yarn-error.log*
 next-env.d.ts
 
 .env
+.env.local
 
 prisma/records.db
+prisma/records.db-journal
 # Sentry Config File
 .env.sentry-build-plugin
