--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "clsx": "^2.1.1",
     "currency.js": "^2.0.4",
     "leaflet": "^1.9.4",
-    "next": "14.2.5",
+    "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
