--- a/.github/workflows/deploy-to-freizeitstress.yaml
+++ b/.github/workflows/deploy-to-freizeitstress.yaml
@@ -35,7 +35,11 @@ jobs:
             # REGISTRY_FOLDER: Your folder in the registry (default: github.repository = repository name)
             - name: Dockerize
               run: |
-                  docker build -t --env-file=$GITHUB_ENV ${{ vars.DOCKER_IMAGE_NAME || github.repository }}:latest .
+                  for var in $(env | awk -F= '{print $1}'); do
+                    build_args+="--build-arg $var=${!var} "
+                  done
+
+                  docker build $build_args -t ${{ vars.DOCKER_IMAGE_NAME || github.repository }}:latest .
                   echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
                   docker tag wohnalert:latest ghcr.io/${{ secrets.REGISTRY_USERNAME || github.actor }}/${{ vars.REGISTRY_FOLDER || github.repository }}/${{ vars.DOCKER_IMAGE_NAME || github.repository }}:latest
                   docker push ghcr.io/${{ secrets.REGISTRY_USERNAME || github.actor }}/${{ vars.REGISTRY_FOLDER || github.repository }}/${{ vars.DOCKER_IMAGE_NAME || github.repository }}:latest
