--- a/.github/workflows/deploy-to-freizeitstress.yaml
+++ b/.github/workflows/deploy-to-freizeitstress.yaml
@@ -35,11 +35,7 @@ jobs:
             # REGISTRY_FOLDER: Your folder in the registry (default: github.repository = repository name)
             - name: Dockerize
               run: |
-                  for var in $(env | awk -F= '{print $1}'); do
-                    build_args+="--build-arg $var=${!var} "
-                  done
-
-                  docker build $build_args -t ${{ vars.DOCKER_IMAGE_NAME || github.repository }}:latest .
+                  docker build --build-arg DATABASE_URL=$DATABASE_URL --build-arg CD_API=$CD_API --build-arg CD_API_KEY=$CD_API_KEY --build-arg NTFY_HOST=$NTFY_HOST -t ${{ vars.DOCKER_IMAGE_NAME || github.repository }}:latest .
                   echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
                   docker tag wohnalert:latest ghcr.io/${{ secrets.REGISTRY_USERNAME || github.actor }}/${{ vars.REGISTRY_FOLDER || github.repository }}/${{ vars.DOCKER_IMAGE_NAME || github.repository }}:latest
                   docker push ghcr.io/${{ secrets.REGISTRY_USERNAME || github.actor }}/${{ vars.REGISTRY_FOLDER || github.repository }}/${{ vars.DOCKER_IMAGE_NAME || github.repository }}:latest
