--- a/.github/workflows/deploy-to-freizeitstress.yaml
+++ b/.github/workflows/deploy-to-freizeitstress.yaml
@@ -10,9 +10,9 @@ on:
 jobs:
     build:
         runs-on: ubuntu-latest
-        # steps:
-        #     - name: Checkout repository
-        #       uses: actions/checkout@v4
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
 
         #     - name: Setup Node.js
         #       uses: actions/setup-node@v2
