--- a/.github/workflows/deploy-to-freizeitstress.yaml
+++ b/.github/workflows/deploy-to-freizeitstress.yaml
@@ -37,7 +37,7 @@ jobs:
               run: |
                   docker build --build-arg DATABASE_URL=$DATABASE_URL --build-arg CD_API=$CD_API --build-arg CD_API_KEY=$CD_API_KEY --build-arg NTFY_HOST=$NTFY_HOST -t ${{ vars.DOCKER_IMAGE_NAME || github.repository }}:latest .
                   echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-                  docker tag wohnalert:latest ghcr.io/${{ secrets.REGISTRY_USERNAME || github.actor }}/${{ vars.REGISTRY_FOLDER || github.repository }}/${{ vars.DOCKER_IMAGE_NAME || github.repository }}:latest
+                  docker tag ${{ vars.DOCKER_IMAGE_NAME || github.repository }}:latest ghcr.io/${{ secrets.REGISTRY_USERNAME || github.actor }}/${{ vars.REGISTRY_FOLDER || github.repository }}/${{ vars.DOCKER_IMAGE_NAME || github.repository }}:latest
                   docker push ghcr.io/${{ secrets.REGISTRY_USERNAME || github.actor }}/${{ vars.REGISTRY_FOLDER || github.repository }}/${{ vars.DOCKER_IMAGE_NAME || github.repository }}:latest
 
     deploy:
@@ -61,12 +61,18 @@ jobs:
             - name: Pull from Github, build, dockerize and start
               run: |
                   ssh -t ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
-                    cd /home/${{ secrets.SSH_USER }}/nodeapps
+                    cd /home/${{ secrets.SSH_USER }}/dockerimages/${{ vars.DOCKER_IMAGE_NAME || github.repository }}
                     echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-                    docker stop ${{ vars.DOCKER_IMAGE_NAME || github.repository}} || true
-                    docker rm ${{ vars.DOCKER_IMAGE_NAME || github.repository}} || true
-                    docker rmi ghcr.io/${{ secrets.REGISTRY_USERNAME || github.actor }}/${{ vars.REGISTRY_FOLDER || github.repository }}/${{ vars.DOCKER_IMAGE_NAME || github.repository }}:latest || true
-                    docker pull ghcr.io/${{ secrets.REGISTRY_USERNAME || github.actor }}/${{ vars.REGISTRY_FOLDER || github.repository }}/${{ vars.DOCKER_IMAGE_NAME || github.repository }}:latest
                     printf "%s" "${{ secrets.ENV }}" > .env
-                    docker run -d --env-file .env -p ${{vars.DOCKER_PORT || 4541}}:4541 --name ${{ vars.DOCKER_IMAGE_NAME || github.repository}} ghcr.io/${{ secrets.REGISTRY_USERNAME || github.actor }}/${{ vars.REGISTRY_FOLDER || github.repository }}/${{ vars.DOCKER_IMAGE_NAME || github.repository }}:latest
+                    docker compose down
+                    docker compose pull
+                    docker compose up -d
+
+
+                    # docker stop ${{ vars.DOCKER_IMAGE_NAME || github.repository}} || true
+                    # docker rm ${{ vars.DOCKER_IMAGE_NAME || github.repository}} || true
+                    # docker rmi ghcr.io/${{ secrets.REGISTRY_USERNAME || github.actor }}/${{ vars.REGISTRY_FOLDER || github.repository }}/${{ vars.DOCKER_IMAGE_NAME || github.repository }}:latest || true
+                    # docker pull ghcr.io/${{ secrets.REGISTRY_USERNAME || github.actor }}/${{ vars.REGISTRY_FOLDER || github.repository }}/${{ vars.DOCKER_IMAGE_NAME || github.repository }}:latest
+                    # 
+                    # docker run -d --env-file .env -p ${{vars.DOCKER_PORT || 4541}}:4541 --name ${{ vars.DOCKER_IMAGE_NAME || github.repository}} ghcr.io/${{ secrets.REGISTRY_USERNAME || github.actor }}/${{ vars.REGISTRY_FOLDER || github.repository }}/${{ vars.DOCKER_IMAGE_NAME || github.repository }}:latest
                   EOF
