--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,11 @@
 services:
   wohnalert:
-    image: wohnalert
+    image: ghcr.io/contraintuitiv/wohnalert/${DOCKER_IMAGE_NAME}:latest
+    container_name: ${DOCKER_IMAGE_NAME}
     restart: always
+    env_file:
+      - .env 
     ports:
-      - "4541:4541"
+      - "${DOCKER_PORT}:4541"
+    volumes:
+      - /home/apps/database/wohnalert/records.db:/app/prisma/records.db
