--- a/.github/workflows/deploy-to-freizeitstress.yaml
+++ b/.github/workflows/deploy-to-freizeitstress.yaml
@@ -18,8 +18,8 @@ jobs:
               with:
                   node-version: '20'
 
-            - name: Install Dependencies
-              run: npm install
+            # - name: Install Dependencies
+            #   run: npm install
 
             - name: Set env
               run:
@@ -41,10 +41,10 @@ jobs:
         needs: build
         steps:
             - name: Checkout repository
-              uses: actions/checkout@v2
+              uses: actions/checkout@v4
 
             - name: SSH to Server
-              uses: webfactory/ssh-agent@v0.5.3
+              uses: webfactory/ssh-agent@v0.9.0
               with:
                   ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
@@ -54,13 +54,13 @@ jobs:
                   ssh-keyscan github.com >> ~/.ssh/known_hosts
                   ssh-keyscan ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
-                    - name: Pull from Github, build, dockerize and start
-                      run: |
-                          ssh -t ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
-                            cd /home/${{ secrets.SSH_USER }}/dockerimages/${{ vars.DOCKER_IMAGE_NAME || github.repository }}
-                            echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-                            printf "%s" "${{ secrets.ENV }}" > .env
-                            docker compose down
-                            docker compose pull
-                            docker compose up -d
-                          EOF
+            - name: Pull from Github, build, dockerize and start
+              run: |
+                  ssh -t ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
+                    cd /home/${{ secrets.SSH_USER }}/dockerimages/${{ vars.DOCKER_IMAGE_NAME || github.repository }}
+                    echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+                    printf "%s" "${{ secrets.ENV }}" > .env
+                    docker compose down
+                    docker compose pull
+                    docker compose up -d
+                  EOF
